# aily

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-requirements.yml  ci.yml
db/app/schema/tables/: booking_requests.hcl  conversation_flow_cancel_items.hcl  conversations.hcl  customers.hcl  messages.hcl  reservations.hcl
docker/: docker-compose.local.yml
docker/db/init/: 004_create_cp_conversation_database.sql
scripts/: draw_graph.py
src/apps/admin/: common.py  main.py
src/apps/admin/pages/: customer_messages.py  customers.py  reservation_detail.py  reservations.py
src/apps/api/: common.py  main.py
src/apps/api/routers/: __init__.py  admin.py  chat.py  webhook.py
src/apps/chat/: main.py
